# darktag

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  TUTORIAL.md  __init__.py  pyproject.toml  test.py
.github/workflows/: publish-testpypi.yml
analysis/: calculate.py  plotting.py
config/: config.py
darktag/: __init__.py
darktag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
darktag/analysis/: calculate.py  plotting.py
darktag/edge/: angular_momentum_tagging.py  binding_energy_tagging.py  spatial_tagging.py
darktag/tagging/: .angular_momentum_tagging_HYDRO_ARRAYS.py.swn  .angular_momentum_tagging_HYDRO_ARRAYS.py.swo  __init__.py  angular_momentum_tagging.py  angular_momentum_tagging_HYDRO_ARRAYS.py  angular_momentum_tagging_HYDRO_DM.py  angular_momentum_tagging_hydrodynamic_sim.py  binding_energy_tagging.py  spatial_tagging.py  tagging_wrapper_func.py
edge/: __init__.py  angular_momentum_tagging.py  binding_energy_tagging.py  spatial_tagging.py
examples/: config_demo.py  tutorial_2_plotting_stellar_mass_distributions.py
tagging/: .angular_momentum_tagging_HYDRO_ARRAYS.py.swp  __init__.py  angular_momentum_tagging.py  angular_momentum_tagging_HYDRO_ARRAYS.py  angular_momentum_tagging_HYDRO_DM.py  angular_momentum_tagging_hydrodynamic_sim.py  binding_energy_tagging.py  spatial_tagging.py  tagging_wrapper_func.py
