[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darktag"
version = "1.0.0"
description = "Particle tagging for dark matter simulations"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sushant Nigudkar"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
]

[project.optional-dependencies]
astrophysics = [
    "pynbody @ git+https://github.com/pynbody/pynbody.git",
    "tangos @ git+https://github.com/pynbody/tangos.git", 
    "darklight @ git+https://github.com/stacykim/darklight.git",
]
keywords = ["astronomy", "astrophysics", "particle-tagging", "dark-matter", "simulations", "stellar-mass"]

[project.urls]
Homepage = "https://github.com/nsushantnigudkar/darktag"
Repository = "https://github.com/nsushantnigudkar/darktag"
Issues = "https://github.com/nsushantnigudkar/darktag/issues"

[tool.setuptools.packages.find]
include = ["darktag*"]
exclude = ["tests*"]